--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "echo 'Static site, no build needed'",
-  "outputDirectory": ".",
+  "buildCommand": "",
+  "outputDirectory": "./",
   "public": true,
   "cleanUrls": true,
   "trailingSlash": false,
